--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,13 @@ dependencies:
   app_settings: ^5.1.1
   awesome_notifications: ^0.8.3
   shared_preferences: ^2.2.2
+  flutter_image_compress: ^2.3.0
+  file_picker: ^8.0.0+1
+  photo_view: ^0.15.0
+  media_kit: ^1.1.10+1
+  media_kit_video: ^1.2.4                        # For video rendering.
+  media_kit_libs_video: ^1.0.4                   # Native video dependencies.
+  media_kit_libs_audio: ^1.0.4                   # Native audio dependencies.
 
 dev_dependencies:
   flutter_test:
