--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,10 @@ dependencies:
   media_kit_video: ^1.2.4                        # For video rendering.
   media_kit_libs_video: ^1.0.4                   # Native video dependencies.
   media_kit_libs_audio: ^1.0.4                   # Native audio dependencies.
+  video_thumbnail: ^0.5.3
+  path_provider: ^2.1.3
+  flutter_file_downloader: ^2.0.0
+  universal_html: ^2.2.4
 
 dev_dependencies:
   flutter_test:
