--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,8 @@ dependencies:
   path_provider: ^2.1.3
   flutter_file_downloader: ^2.0.0
   universal_html: ^2.2.4
+  piano: ^1.0.4
+
 
 dev_dependencies:
   flutter_test:
