--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,8 @@ dependencies:
   file_picker: ^8.0.0+1
   photo_view: ^0.15.0
   path_provider: ^2.1.3
+  video_player: ^2.8.7
+  visibility_detector: ^0.4.0+2
 
 
 
