--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,7 +62,9 @@ dependencies:
   path_provider: ^2.1.3
   video_player: ^2.8.7
   visibility_detector: ^0.4.0+2
-  time_machine: ^0.9.17
+  flutter_file_downloader: ^2.0.0
+  permission_handler: ^11.3.1
+  universal_html: ^2.2.4
 
 
 
