--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ dependencies:
   flutter_file_downloader: ^2.0.0
   permission_handler: ^11.3.1
   universal_html: ^2.2.4
+  loading_animation_widget: ^1.2.1
 
 
 
