--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,10 @@ dependencies:
   permission_handler: ^11.3.1
   universal_html: ^2.2.4
   loading_animation_widget: ^1.2.1
+  flutter_sound: ^8.1.9
+  assets_audio_player: ^3.0.3+3
+  record_mp3: ^3.0.0
+  audioplayers: ^6.0.0
 
 
 
