--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,7 +52,7 @@ dependencies:
   google_sign_in: ^6.1.6
   shimmer: ^3.0.0
   shimmer_container: ^0.0.2
-#  flutter_webrtc: ^0.11.1
+  flutter_webrtc: ^0.11.1
   app_settings: ^5.1.1
   awesome_notifications: ^0.8.3
   shared_preferences: ^2.2.2
@@ -60,20 +60,16 @@ dependencies:
   file_picker: ^8.0.0+1
   photo_view: ^0.15.0
   path_provider: ^2.1.3
-#  video_player: ^2.8.7
+  video_player: ^2.8.7
   visibility_detector: ^0.4.0+2
   flutter_file_downloader: ^2.0.0
-#  permission_handler: ^11.3.1
+  permission_handler: ^11.3.1
   universal_html: ^2.2.4
   loading_animation_widget: ^1.2.1
   flutter_sound: ^8.1.9
   assets_audio_player: ^3.0.3+3
   record_mp3: ^3.0.0
-  audioplayers: ^5.2.1
-  video_player: ^2.8.5
-  permission_handler: ^11.0.1
-  flutter_webrtc: ^0.9.48+hotfix.1
-#  audioplayers: ^6.0.0
+  audioplayers: ^6.0.0
 
 
 
