--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,11 +31,11 @@ dependencies:
   flutter:
     sdk: flutter
 
-  firebase_storage: ^11.5.1
-  firebase_core: ^2.16.0
-  firebase_auth: ^4.10.0
+  firebase_storage: ^12.1.0
+  firebase_core: ^3.1.1
+  firebase_auth: ^5.1.1
   provider:
-  cloud_firestore: ^4.9.2
+  cloud_firestore: ^5.0.2
   hexcolor: ^3.0.1
   http: ^1.1.0
 
@@ -43,10 +43,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  image_picker: ^1.0.4
   flutter_signin_button: ^2.0.0
-  firebase_messaging: ^14.7.6
-  flutter_local_notifications: ^16.2.0
+  firebase_messaging: ^15.0.2
+  flutter_local_notifications: ^17.2.1
   cached_network_image: ^3.3.0
   intl: ^0.19.0
   google_sign_in: ^6.1.6
@@ -54,9 +53,8 @@ dependencies:
   shimmer_container: ^0.0.2
   flutter_webrtc: ^0.11.1
   app_settings: ^5.1.1
-  awesome_notifications: ^0.8.3
+  awesome_notifications: ^0.9.3+1
   shared_preferences: ^2.2.2
-  flutter_image_compress: ^2.3.0
   file_picker: ^8.0.0+1
   photo_view: ^0.15.0
   path_provider: ^2.1.3
@@ -66,7 +64,7 @@ dependencies:
   permission_handler: ^11.3.1
   universal_html: ^2.2.4
   loading_animation_widget: ^1.2.1
-  flutter_sound: ^8.1.9
+  flutter_sound: ^9.2.13
   assets_audio_player: ^3.0.3+3
   record_mp3: ^3.0.0
   audioplayers: ^6.0.0
@@ -82,7 +80,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^4.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
